--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -892,7 +892,9 @@ a.active-facets__button.focused .active-facets__button-inner {
   border-bottom: 1px solid #d9d9d9;
 }
 .sp-fliter .menu-opening .mobile-facets__close {
-  margin: 10px;
+  margin: 1rem;
+  width: 1.6rem;
+  height: 1.6rem;
 }
 .sp-fliter .mobile-facets__close:hover .svg-wrapper > svg {
   transform: rotate(90deg);
@@ -962,10 +964,11 @@ a.active-facets__button.focused .active-facets__button-inner {
   display: none;
 }
 .sp-fliter .mobile-facets__heading {
-  font-size: 40px;
-  font-weight: 700;
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: -1px;
+  line-height: 28px;
   text-transform: uppercase;
-  letter-spacing: -1.2px;
 }
 .mobile-facets__count {
   color: rgba(var(--color-foreground), 0.7);
